--- a/resources/docker/docker-compose.yml
+++ b/resources/docker/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   ehrbase:
     image: ehrbase/ehrbase:0.30.0
+    # image: ehrbase/ehrbase:0.27.0
     ports:
       - 8080:8080
     networks:
@@ -15,6 +16,17 @@ services:
       DB_PASS_ADMIN: ehrbase
       DB_USER: ehrbase_restricted
       DB_PASS: ehrbase_restricted
+      MANAGEMENT_ENDPOINTS_WEB_EXPOSURE: env,health,info,metrics,prometheus
+      MANAGEMENT_ENDPOINTS_WEB_BASEPATH: /management
+      MANAGEMENT_ENDPOINT_ENV_ENABLED: true
+      MANAGEMENT_ENDPOINT_HEALTH_ENABLED: true
+      MANAGEMENT_ENDPOINT_HEALTH_DATASOURCE_ENABLED: true
+      MANAGEMENT_ENDPOINT_INFO_ENABLED: true
+      MANAGEMENT_ENDPOINT_METRICS_ENABLED: true
+      MANAGEMENT_ENDPOINT_PROMETHEUS_ENABLED: true
+      MANAGEMENT_ENDPOINT_HEALTH_PROBES_ENABLED: true
+      ADMIN_API_ACTIVE: true
+      ADMINAPI_ALLOWDELETEALL: true
     restart: on-failure
 
   ehrdb:
@@ -34,4 +46,4 @@ services:
       EHRBASE_PASSWORD: ehrbase_restricted
 
 networks:
-  ehrbase-net: {}
+  ehrbase-net: { }
