--- a/resources/docker-pipeline/docker-compose.yml
+++ b/resources/docker-pipeline/docker-compose.yml
@@ -2,8 +2,10 @@ version: '3'
 
 services:
   pipeline:
-    image: registry.gitlab.uni-oldenburg.de/ebki3136/mediaktionsplan-pipeline:cicd
+    image: registry.gitlab.uni-oldenburg.de/ebki3136/mediaktionsplan-pipeline
     volumes:
       - /home/jonas/Studium/cloud/BA/BA Daten:/data/input
+      - /home/jonas/Studium/Programming/BA/Medikations-Pipeline/debug:/data/debug
     environment:
       EHRBASE_BASE_URL: http://10.17.2.25:8080
+      DEBUG: true
