--- a/resources/docker-pipeline/docker-compose.yml
+++ b/resources/docker-pipeline/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3'
 
 services:
   pipeline:
-    image: registry.gitlab.uni-oldenburg.de/ebki3136/mediaktionsplan-pipeline:develop
+    image: registry.gitlab.uni-oldenburg.de/ebki3136/mediaktionsplan-pipeline:7-introducing-spring-for-better-project-structure
     volumes:
-      - /home/jonas/Studium/cloud/BA/BA Daten:/io/data
+      - /home/jonas/Studium/cloud/BA/TestPDF:/io/data
       - /home/jonas/Studium/Programming/BA/Medikations-Pipeline/debug:/io/debug
       - /home/jonas/Studium/Programming/BA/Medikations-Pipeline/logs:/io/logs
     environment:
-      EHRBASE_BASE_URL: http://10.17.2.25:8080
-      DEBUG: false
+      OPENEHR_URL: http://10.17.2.25:8080/ehrbase/
+      DEBUG_DRAWIMAGES: false
