--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>medication plan pipeline</name>
+    <name>Medication Plan Pipeline</name>
     <url>http://maven.apache.org</url>
 
     <properties>
