Gelbe Liste Verifikation

--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.16.1</version>
         </dependency>
 
         <dependency>
