Resolve "Validierung der Seite des Medikationsplans anhand Header String"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 openehr.username=ehrbase-user
 openehr.password=SuperSecretPassword
 openehr.url=http://ehrbase:8080/ehrbase/
-
 io.dataFolder=/io/data/
 io.debugFolder=/io/debug/
 debug.drawImages=false
 pdf.dpi=300
+skipWhenNoHeaderFound=true
