more data saving

--- a/resources/docker/pipeline/docker-compose.yml
+++ b/resources/docker/pipeline/docker-compose.yml
@@ -11,3 +11,4 @@ services:
       OPENEHR_URL: http://10.17.15.239:8080/ehrbase/
       DEBUG_DRAWIMAGES: false
       LOGGING_LEVEL_COM_JAYPI4C_BA_PIPELINE_MEDICATIONPLAN: INFO
+      VALIDATION_ACTIVE: false
