--- a/pom.xml
+++ b/pom.xml
@@ -6,52 +6,32 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
-    <groupId>com.jaypi4c</groupId>
-    <artifactId>PDF-Uploader</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>PDF-Uploader</name>
-    <description>PDF-Uploader</description>
+
+    <groupId>com.jaypi4c.tinia</groupId>
+    <artifactId>tinia</artifactId>
+    <version>${revision}</version>
+    <packaging>pom</packaging>
+
+    <name>Tinia</name>
+    <description>BMP Converter</description>
+
+    <url>https://github.com/JayPi4c/Tinia</url>
+
+    <modules>
+        <module>web</module>
+        <module>pipeline</module>
+    </modules>
+
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <revision>0.0.1-SNAPSHOT</revision>
         <java.version>21</java.version>
+        <org.mockito.version>5.10.0</org.mockito.version>
     </properties>
+
     <dependencies>
-        <dependency>
-            <groupId>org.apache.pdfbox</groupId>
-            <artifactId>pdfbox</artifactId>
-            <version>2.0.29</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>nz.net.ultraq.thymeleaf</groupId>
-            <artifactId>thymeleaf-layout-dialect</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>bootstrap</artifactId>
-            <version>5.3.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>webjars-locator</artifactId>
-            <version>0.50</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
