Build docker images for web and standalone pipeline

--- a/pipeline/Dockerfile
+++ b/pipeline/Dockerfile
@@ -1,3 +1,11 @@
-FROM openjdk:17.0.2
-COPY target/medication-plan-pipeline.jar pipeline.jar
-ENTRYPOINT ["java","-jar","/pipeline.jar"]
+FROM maven:3.9.6-eclipse-temurin-21-alpine AS builder
+WORKDIR /opt/app
+COPY . .
+RUN mvn -P pipeline package -B -pl pipeline -am
+
+FROM openjdk:21-slim
+WORKDIR /opt/app
+
+COPY --from=builder /opt/app/pipeline/target/tinia-pipeline.jar .
+
+ENTRYPOINT ["java", "-jar", "/opt/app/tinia-pipeline.jar"]
